--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,7 @@ html {
 .nav-item a {
   border-bottom: 2px solid transparent;
   border-top: 2px solid transparent;
+  margin-inline: 5px;
 }
 
 .nav-item a:hover {
@@ -24,7 +25,7 @@ html {
 }
 
 @media screen and (min-width: 576px) {
-  .nav-item a:hover {
+  .nav-item a:hover, .nav-item a.active {
     border-bottom: 2px solid white;
   }
 }
