--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,8 +165,8 @@ html {
 #image-toggle {
   scale: 0.7;
   width: 270px;
-  margin-left: auto;
-  margin-right: -30px;
+  margin-right: auto;
+  margin-left: -20px;
   margin-bottom: -5px;
 }
 
