--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,14 +75,21 @@ html {
   transition: opacity 0.4s ease-in-out;
 }
 
-#projects .card .buttons {
+#projects .card img[data-type="screenshot"] { 
+  object-position: center top;
+}
+
+#projects .card .buttons, #projects .card i {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   display: none;
   z-index: 99;
   transition: all 0.4s ease-in-out;
+}
+
+#projects .card .buttons {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   min-width: 130px;
 }
 
@@ -108,6 +115,11 @@ html {
 }
 
 #projects .card:hover div {
+  display: block;
+  transition: all 0.4s ease-in-out;
+}
+
+#projects .card:hover i {
   display: block;
   transition: all 0.4s ease-in-out;
 }
@@ -155,7 +167,7 @@ html {
   background-color: black;
   border-radius: 50%;
   margin-left: 1.75rem;
-  transition: margin 150ms linear;
+  transition: margin 200ms linear;
 }
 
 .toggle-on:checked ~ .toggle-btn::after {
