--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,7 +65,14 @@ html {
 
 #projects .img-wrapper {
   position: relative;
-  background-color:gray;
+  background-color:grey;
+  animation: bgdelay 1s linear;
+  animation-fill-mode: backwards;
+}
+
+@keyframes bgdelay {
+  from {background-color:transparent;}
+  to {background-color:grey;}
 }
 
 #projects .card img { 
@@ -128,6 +135,26 @@ html {
   #projects .card img { 
     /* max-height: 300px; */
     max-height: 80vw;
+  }
+}
+
+#projects .card {
+  --delay: 100ms;
+  animation: animate-in 700ms ease-out;
+  animation-fill-mode: backwards;
+  
+}
+
+@keyframes animate-in {
+  from {
+    opacity: 0;
+    scale: 0.3;
+    /* filter: hue-rotate(180deg) */
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+    /* filter: hue-rotate(0deg) */
   }
 }
 
